2011/05    fixed hypvol function to avoid overflow
           fixed hypvol helpfile value description
2011/02    removed ununsed variables and tabs from source code
           switched to intrinsic gamma in source code
           fixed default warning in estepVEV and mstepVEV
2010/12    fixed output when G = 1 (it had NA for the missing "z" component)
2010/10    removed hierarchical clustering capability for the EEE model (hcEEE)
           The R 2.12.0 build failed due to a 32-bit Windows compiler error,
           forcing removal of the underlying Fortran code for hcEEE from the
           package, which does not contain errors and compiles on other
           platforms.
2010/08    added description of parameters output component to Mclust and
           summary.mclustBIC help files
2010/07    added densityMclust function
2010/04    fixed bug in covariance matrix output for EEV and VEV models
2010/02    moved CITATION to inst and used standard format
           BibTex entries are in inst/cite
           fixed bug in handling missing classes in mclustBIC
           clarified license wording
2010/01    corrected output description in mclustModel help file
           updated mclust manual reference to show revision
2009/12    updated defaultPrior help file
           added utility functions for imputing missing data with the
           mix package
           changed default max # of mixture components in each class 
           from 9 to 3
2009/10    fixed problems with \cr in mclustOptions help file
2009/06    fixed plot.mclustBIC/plot.Mclust to handle modelNames
           changed "orientation" for VEV, VVV models to be consistent
              with R eigen() and the literature
           fixed some problems including doc for the noise option
           updated the unmap function to optionally include missing groups
2009/06    fixed bug in the "errors" option for randProj
           fixed boundary cases for the "noise" option