@@ -1,3 +1,4 @@
+2011/05    removed intrinsic gamma
 2011/05    fixed hypvol function to avoid overflow
            fixed hypvol helpfile value description
 2011/02    removed ununsed variables and tabs from source code
